# Riru-Il2CppDumper

module/: build.gradle
module/src/main/cpp/: And64InlineHook.cpp  And64InlineHook.hpp  CMakeLists.txt  hack.cpp  hack.h
module/src/main/cpp/shadowhook/libs/arm64-v8a/: abi.json
module/src/main/cpp/shadowhook/libs/armeabi-v7a/: abi.json
